# metaclaw-dist

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  metaclaw.toml.example  pyproject.toml
src/metaclaw/: __init__.py  __main__.py  cli.py  config.py  server.py
src/metaclaw/channels/: __init__.py  base.py  manager.py  message.py  router.py
src/metaclaw/channels/adapters/: __init__.py  discord.py  email.py  google_chat.py  line.py  slack.py  teams.py  telegram.py  twilio.py  webhook.py  wechat.py  whatsapp.py  zoom.py
src/metaclaw/core/: __init__.py  agent.py  context.py
src/metaclaw/core/tools/: __init__.py  base.py  bash.py  edit_file.py  read_file.py  write_file.py
src/metaclaw/llm/: __init__.py  models.py  provider.py
src/metaclaw/sessions/: __init__.py  store.py
src/metaclaw/skills/: __init__.py  activator.py  creator.py  discovery.py  installer.py  parser.py  registry.py
src/metaclaw/skills/builtin/channel-setup/: SKILL.md
src/metaclaw/skills/builtin/metaclaw-manager/: SKILL.md
src/metaclaw/skills/builtin/onboarding/: SKILL.md
src/metaclaw/utils/: formatting.py  logging.py
src/metaclaw/web/: __init__.py  app.py
src/metaclaw/web/dashboard/: __init__.py
src/metaclaw/web/routes/: __init__.py  api.py  health.py  webhooks.py
tests/: conftest.py  test_agent.py
tests/test_channels/: test_router.py
tests/test_llm/: test_provider.py
tests/test_skills/: test_discovery.py  test_parser.py
tests/test_tools/: test_bash.py  test_edit_file.py  test_read_file.py  test_write_file.py
